--- a/css/style.css
+++ b/css/style.css
@@ -2056,3 +2056,9 @@ form {
         font-size: 10px;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .hide_me_small {
+        display: none;
+    }
+}
